Added tests support

--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,9 @@
   "presets": [
     ["env", {
       "targets": {
-        "electron": "1.8.4"
-      },
-      "modules": false
+        "node": "8.2",
+        "chrome": 59
+      }
     }],
     "react"
   ],
