--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,8 @@
   "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "node": true,
     "es6": true,
-    "mocha": true
+    "jest": true
   },
   "rules": {
     "valid-jsdoc": ["error", {
@@ -39,5 +38,19 @@
       },
       "allowChildren": false
     }]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.js", "**/*.jsx"],
+      "rules": {
+        "function-paren-newline": "off",
+        "comma-dangle": "off"
+      },
+      "globals": {
+        "shallow": false,
+        "render": false,
+        "mount": false
+      }
+    }
+  ]
 }
