--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "clean": "rm -rf ./dist",
   "dev": "webpack-dev-server --mode development --config ./webpack.config.js",
   "dev:build": "npm run clean && webpack --mode development --config ./webpack.config.js",
-  "prod": "npm run clean && webpack --mode production --config ./webpack.config.js",
+  "prod": "npm run test && npm run clean && webpack --mode production --config ./webpack.config.js",
+  "prod:force": "npm run clean && webpack --mode production --config ./webpack.config.js",
   "test": "jest",
   "test:watch": "jest --watch",
   "test:coverage": "jest --coverage"
